--- a/projects/icon/src/lib/icon.component.html
+++ b/projects/icon/src/lib/icon.component.html
@@ -10,29 +10,30 @@
 >
   <linearGradient
     id="fill-gradient-{{id}}"
-    attr.gradientTransform="rotate({{rotateTransform(fillRotate)}})"
+    attr.gradientTransform="rotate({{_fillRotate}})"
   >
     <stop
-      *ngFor="let color of _fill; let idx = index"
-      attr.offset="{{gradientOffset(idx, _fill)}}%"
-      attr.stop-color="#{{color}}"
+      *ngFor="let item of _fill; let idx = index"
+      [attr.offset]="linearGradientStopOffset(idx, _fill)"
+      [attr.stop-color]="linearGradientStopColor(item)"
+      [attr.stop-opacity]="linearGradientStopOpacity(item)"
     />
   </linearGradient>
   <linearGradient
     id="stroke-gradient-{{id}}"
-    attr.gradientTransform="rotate({{rotateTransform(strokeRotate)}})"
+    attr.gradientTransform="rotate({{_strokeRotate}})"
   >
     <stop
-      *ngFor="let color of _stroke; let idx = index"
-      attr.offset="{{gradientOffset(idx, _stroke)}}%"
-      attr.stop-color="#{{color}}"
+      *ngFor="let item of _stroke; let idx = index"
+      [attr.offset]="linearGradientStopOffset(idx, _stroke)"
+      [attr.stop-color]="linearGradientStopColor(item)"
     />
   </linearGradient>
   <circle
     *ngIf="type === 'circle'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     cx="50"
     cy="50"
@@ -40,9 +41,9 @@
   />
   <circle
     *ngIf="type === 'dot'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     cx="50"
     cy="50"
@@ -50,17 +51,17 @@
   />
   <path
     *ngIf="type === 'ring'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     d="M50,2.5C23.767,2.5,2.5,23.767,2.5,50S23.767,97.5,50,97.5S97.5,76.233,97.5,50S76.233,2.5,50,2.5z M50,80c-16.568,0-30-13.432-30-30c0-16.568,13.432-30,30-30s30,13.432,30,30C80,66.568,66.568,80,50,80z"
   />
   <rect
     *ngIf="type === 'square'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     x="2.5"
     y="2.5"
@@ -69,9 +70,9 @@
   />
   <rect
     *ngIf="type === 'squircle'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     x="2.5"
     y="2.5"
@@ -81,9 +82,9 @@
   />
   <rect
     *ngIf="type === 'minus'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     x="2.5"
     y="37.5"
@@ -92,65 +93,65 @@
   />
   <polygon
     *ngIf="type === 'check'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     points="96.465,27.488 82.322,13.347,37.257,58.367 17.675,38.785 3.535,52.928 37.259,86.652"
   />
   <polygon
     *ngIf="type === 'times'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     points="64.143,50 96.465,17.678 82.323,3.535,50,35.857 17.678,3.535 3.535,17.676 35.858,50 3.535,82.323 17.678,96.465 50.001,64.142 82.323,96.465 96.465,82.322"
   />
   <polygon
     *ngIf="type === 'plus'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     points="97.5,37.5 62.5,37.5 62.5,2.5 37.5,2.5 37.5,37.5 2.5,37.5 2.5,62.5 37.5,62.5 37.5,97.5 62.5,97.5 62.5,62.5 97.5,62.5"
   />
   <polygon
     *ngIf="type === 'row'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     points="96,50 66.5,20 66.5,37.5 33.5,37.5 33.5,20 4,50 33.5,80 33.5,62.5 66.5,62.5 66.5,80"
   />
   <polygon
     *ngIf="type === 'column'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     points="62.5,33.535 80,33.535 50,3.535 20,33.535 37.5,33.535 37.5,66.465 20,66.465 50,96.465 80,66.465 62.5,66.465"
   />
   <polygon
     *ngIf="type === 'flag'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     points="93,33.86 22.5,7.368 22.5,2.5 2.5,2.5 2.5,97.5 22.5,97.5 22.5,59.915"
   />
   <path
     *ngIf="type === 'gear'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     d="M96.35,39.625C95.178,34.369,93.14,29.44,90.385,25H80l-5-5V9.618C70.554,6.859,65.617,4.82,60.353,3.65L56.61,7.761L50,15.022l-6.61-7.261L39.647,3.65C34.382,4.82,29.447,6.859,25,9.618V20l-5,5H9.615C6.86,29.44,4.822,34.369,3.65,39.625l4.165,3.764L15.132,50l-7.316,6.61L3.65,60.375C4.822,65.631,6.86,70.56,9.615,75H20l5,5v10.382c4.441,2.755,9.371,4.793,14.628,5.964l3.761-4.162L50,84.867l6.61,7.316l3.761,4.162c5.258-1.171,10.188-3.209,14.629-5.964V80l5-5h10.385c2.755-4.44,4.793-9.369,5.965-14.625l-4.165-3.765L84.869,50l7.315-6.611L96.35,39.625z M50,72.5c-12.427,0-22.5-10.073-22.5-22.5c0-12.426,10.073-22.5,22.5-22.5S72.5,37.574,72.5,50C72.5,62.427,62.427,72.5,50,72.5z"
   />
   <polygon
     *ngIf="type === 'star'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     points="50,9.91 62.022,38.363 92.798,41.005
 69.453,61.23 76.45,91.316 50,75.364 23.55,91.315 30.547,61.23 7.203,41.005 37.978,38.363 "
@@ -159,9 +160,9 @@
   <circle
     *ngIf="type === 'user'"
     fill="#FFFFFF"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     cx="50"
     cy="27.5"
@@ -169,36 +170,36 @@
   />
   <path
     *ngIf="type === 'user'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     d="M86.6,52.5H71.646 C67.324,59.971,59.252,65,50,65s-17.324-5.029-21.646-12.5H14.4c-6.297,0-11.9,5.373-11.9,12v33h95v-33 C97.5,57.873,92.896,52.5,86.6,52.5z"
   />
   <!-- end user -->
   <path
     *ngIf="type === 'bomb'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     d="M93.634,34.651c4.687-4.686,5.182-11.789,1.107-15.863L81.213,5.261c-4.074-4.076-11.178-3.58-15.863,1.105l-1.252,1.252C59.294,5.929,54.132,5,48.75,5C23.207,5,2.5,25.707,2.5,51.25S23.207,97.5,48.75,97.5S95,76.793,95,51.25c0-5.381-0.929-10.543-2.618-15.347L93.634,34.651z M70.4,64.681l-12.009-1.009l-1.091,12.001l-8.551-8.492l-8.55,8.492l-1.091-12.001L27.1,64.681l6.878-9.896L24.13,47.84l11.63-3.159l-3.08-11.65l10.939,5.056l5.13-10.905l5.131,10.905L64.82,33.03l-3.08,11.65l11.63,3.159l-9.849,6.945L70.4,64.681z"
   />
   <!-- start refresh -->
   <path
     *ngIf="type === 'refresh'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     stroke-miterlimit="10"
     d="M50,80c-9.186,0-17.391-4.141-22.893-10.643L37.5,58.965h-35v35l12.204-12.204C23.395,91.42,35.982,97.5,50,97.5c26.232,0,47.5-21.268,47.5-47.5H80C80,66.568,66.568,80,50,80z"
   />
   <path
     *ngIf="type === 'refresh'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     stroke-miterlimit="10"
     d="M85.296,18.24C76.605,8.58,64.018,2.5,50,2.5C23.768,2.5,2.5,23.768,2.5,50H20c0-16.568,13.432-30,30-30c9.186,0,17.393,4.141,22.893,10.643L62.5,41.036h35v-35L85.296,18.24z"
@@ -206,34 +207,34 @@
   <!-- end refresh -->
   <polygon
     *ngIf="type === 'ascend'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     points="50,3.841 20,38.842 80,38.842"
   />
   <polygon
     *ngIf="type === 'descend'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     points="50,96.158 20,61.158 80,61.158"
   />
   <path
     *ngIf="type === 'search'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     stroke-miterlimit="10"
     d="M96.465,87.627L70.56,61.721C74.924,55.591,77.5,48.099,77.5,40C77.5,19.29,60.711,2.5,40,2.5C19.29,2.5,2.5,19.29,2.5,40c0,20.711,16.79,37.5,37.5,37.5c8.098,0,15.591-2.575,21.72-6.94l25.906,25.905L96.465,87.627z M40,65c-13.807,0-25-11.192-25-25c0-13.807,11.193-25,25-25c13.808,0,25,11.193,25,25C65,53.808,53.808,65,40,65z"
   />
   <path
     *ngIf="type === 'crown'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     stroke-miterlimit="10"
     d="M95,22.5c0-4.143-3.357-7.5-7.5-7.5
@@ -244,9 +245,9 @@
   />
   <path
     *ngIf="type === 'ogre'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     stroke-miterlimit="10"
     d="M82.5,5.721c0,0,5,5,5,15s-10,10-10,10h-3.519
@@ -259,9 +260,9 @@
   />
   <path
     *ngIf="type === 'folder'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     stroke-miterlimit="10"
     d="M42.503,10.5c-9.836,0-28.103,0-28.103,0
@@ -270,9 +271,9 @@
   />
   <polygon
     *ngIf="type === 'chevron'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     stroke-miterlimit="10"
     points="96.965,50.5 50.5,4.035 4.035,50.5
@@ -280,9 +281,9 @@
   />
   <path
     *ngIf="type === 'ankh'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     stroke-miterlimit="10"
     d="M85,60l-5-15H60.938
@@ -292,9 +293,9 @@
   />
   <polygon
     *ngIf="type === 'sun'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     stroke-miterlimit="10"
     points="50.001,5.864 57.541,21.864
@@ -304,14 +305,38 @@
   />
   <path
     *ngIf="type === 'moon'"
-    [attr.fill]="fillAttribute"
+    attr.fill="url(#fill-gradient-{{id}})"
     [attr.fill-opacity]="fillOpacity"
-    [attr.stroke]="strokeAttribute"
+    attr.stroke="url(#stroke-gradient-{{id}})"
     stroke-width="5"
     stroke-miterlimit="10"
     d="M90.029,62.626
 	c-14.54,14.54-38.115,14.539-52.654,0c-14.54-14.54-14.54-38.114,0-52.654c2.739-2.74,5.802-4.963,9.061-6.67
 	C35.463,4.049,24.701,8.604,16.313,16.991c-18.417,18.418-18.417,48.278,0,66.696c18.417,18.416,48.278,18.416,66.694,0
 	c8.389-8.389,12.942-19.149,13.69-30.123C94.989,56.825,92.768,59.886,90.029,62.626z"
+  />
+  <rect
+    *ngIf="type === 'clear'"
+    x="2.5"
+    y="2.5"
+    attr.fill="url(#fill-gradient-{{id}})"
+    [attr.fill-opacity]="fillOpacity"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    stroke-width="5"
+    stroke-miterlimit="10"
+    width="75"
+    height="75"
+  />
+  <rect
+    *ngIf="type === 'clear'"
+    x="22.5"
+    y="22.5"
+    fill="none"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    stroke-width="5"
+    stroke-miterlimit="10"
+    stroke-dasharray="13.25 5.5"
+    width="75"
+    height="75"
   />
 </svg>
