add back styles

--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -1,1 +1,93 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Arial;
+  margin: auto;
+  padding: 0 0.25em;
+  max-width: 720px;
+  color: whitesmoke;
+}
+
+a {
+  color: whitesmoke;
+  &:active {
+    color: grey;
+  }
+}
+
+h2,
+h3,
+h4 {
+  margin: 0;
+  padding: 1em 0 0.25em 0;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+h4 {
+  font-size: 1.25em;
+}
+
+.col-1 {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 1em;
+}
+
+.col-1-1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  @media (max-width: 720px) {
+    grid-template-columns: 1fr;
+  }
+}
+.col-1-1 {
+  grid-gap: 1.25em;
+}
+
+.pos-sticky {
+  position: sticky;
+  top: 0;
+}
+
+.d-flex {
+  display: flex;
+}
+.flex-1 {
+  flex: 1;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.f-justify-center {
+  justify-content: center;
+}
+.f-justify-right {
+  justify-content: flex-end;
+}
+
+.pt-1 {
+  padding-top: 0.25em;
+}
+.pr-1 {
+  padding-right: 0.25em;
+}
+.pl-1 {
+  padding-left: 0.25em;
+}
+.pt-2 {
+  padding-top: 0.5em;
+}
+.pb-2 {
+  padding-bottom: 0.5em;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
